response support courier.Result for coping buffer on flying
